gold/layout.h
@@ -480,6 +480,10 @@ class Layout
   void
   create_build_id();
 
+  // Link .stab and .stabstr sections.
+  void
+  link_stabs_sections();
+
   // Create .gnu_incremental_inputs and .gnu_incremental_strtab sections needed
   // for the next run of incremental linking to check what has changed.
   void
@@ -724,6 +728,8 @@ class Layout
   bool any_postprocessing_sections_;
   // Whether we have resized the signatures_ hash table.
   bool resized_signatures_;
+  // Whether we have created a .stab*str output section.
+  bool have_stabstr_section_;
   // In incremental build, holds information check the inputs and build the
   // .gnu_incremental_inputs section.
   Incremental_inputs* incremental_inputs_;
